Primeiro commit do meu portfólio

--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ body.light .tooltip {
     margin-top: 1rem;
     font-size: x-large; /* Tamanho maior para h1 */
     color: var(--letter-b-bright); /* Cor do título */
-    text-align: center;
+    text-align: center;https://www.reed.co.uk/career-advice/why-you-need-the-reed-co-uk-app/
     margin-bottom: 2rem;
     transform: translateX(-1rem);
 
